Add dwell and distance filters
